--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  hive:
+  hive: ^2.2.3
   hive_flutter:
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_slidable:
+  flutter_slidable: ^3.0.0
 
 dev_dependencies:
   flutter_test:
